// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageUpload renders the component 1`] = `
<div
  className="tribe-editor__image-upload"
>
  <div
    className="tribe-editor__image-upload__content"
  >
    <button>
      Media Upload
    </button>
  </div>
</div>
`;

exports[`ImageUpload renders upload image button 1`] = `
<div
  className="tribe-editor__image-upload"
>
  <div
    className="tribe-editor__image-upload__content"
  >
    <button>
      Media Upload
    </button>
  </div>
</div>
`;

exports[`ImageUpload renders uploaded image 1`] = `
<div
  className="tribe-editor__image-upload tribe-editor__image-upload--has-image"
>
  <div
    className="tribe-editor__image-upload__content"
  >
    <div
      className="tribe-editor__image-upload__image-wrapper"
    >
      <img
        alt="test-alt"
        className="tribe-editor__image tribe-editor__image-upload__image"
        src="test-src"
      />
      <button
        className="tribe-editor__button tribe-editor__image-upload__remove-button"
        onClick={[MockFunction]}
        type="button"
      >
        <span>
          icon
        </span>
        <span
          className="tribe-editor__image-upload__remove-button-text"
        >
          remove
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`ImageUpload renders with class 1`] = `
<div
  className="tribe-editor__image-upload test-class"
>
  <div
    className="tribe-editor__image-upload__content"
  >
    <button>
      Media Upload
    </button>
  </div>
</div>
`;

exports[`ImageUpload renders with description 1`] = `
<div
  className="tribe-editor__image-upload"
>
  <div
    className="tribe-editor__image-upload__content"
  >
    <p
      className="tribe-editor__image-upload__description"
    >
      The Next Generation of Digital Agency
    </p>
    <button>
      Media Upload
    </button>
  </div>
</div>
`;

exports[`ImageUpload renders with title 1`] = `
<div
  className="tribe-editor__image-upload"
>
  <h3
    className="tribe-editor__image-upload__title"
  >
    Modern Tribe
  </h3>
  <div
    className="tribe-editor__image-upload__content"
  >
    <button>
      Media Upload
    </button>
  </div>
</div>
`;

exports[`renderImage renders the image and button 1`] = `
<div
  className="tribe-editor__image-upload__image-wrapper"
>
  <img
    alt="test-alt"
    className="tribe-editor__image tribe-editor__image-upload__image"
    src="test-src"
  />
  <button
    className="tribe-editor__button tribe-editor__image-upload__remove-button"
    disabled={false}
    onClick={[MockFunction]}
    type="button"
  >
    <span>
      icon
    </span>
    <span
      className="tribe-editor__image-upload__remove-button-text"
    >
      remove
    </span>
  </button>
</div>
`;

exports[`renderImage renders the image and disabled button 1`] = `
<div
  className="tribe-editor__image-upload__image-wrapper"
>
  <img
    alt="test-alt"
    className="tribe-editor__image tribe-editor__image-upload__image"
    src="test-src"
  />
  <button
    className="tribe-editor__button tribe-editor__image-upload__remove-button"
    disabled={true}
    onClick={[MockFunction]}
    type="button"
  >
    <span>
      icon
    </span>
    <span
      className="tribe-editor__image-upload__remove-button-text"
    >
      remove
    </span>
  </button>
</div>
`;

exports[`renderImageUploadButton renders the button 1`] = `
<button
  className="tribe-editor__button tribe-editor__button--sm tribe-editor__image-upload__upload-button"
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  label
</button>
`;

exports[`renderImageUploadButton renders the button disabled 1`] = `
<button
  className="tribe-editor__button tribe-editor__button--sm tribe-editor__image-upload__upload-button"
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  label
</button>
`;
